--- a/paths/paths-projectA.json
+++ b/paths/paths-projectA.json
@@ -1,5 +1,5 @@
 {
-   "images" : "demo/projectA/img",
-  "scripts" : "demo/projectA/js",
-   "styles" : "demo/projectA/css"
+   "images" : "../sdd-demo-projectA/img",
+  "scripts" : "../sdd-demo-projectA/js",
+   "styles" : "../sdd-demo-projectA/css"
 }
