Tons of comments in gulpfile.js

--- a/paths/paths-projectC.json
+++ b/paths/paths-projectC.json
@@ -1,5 +1,5 @@
 {
-   "images" : "../sdd-demo-projectA/img",
-  "scripts" : "../sdd-demo-projectA/js",
-   "styles" : "../sdd-demo-projectA/css"
+   "images" : "../sdd-demo-projectC/img",
+  "scripts" : "../sdd-demo-projectC/js",
+   "styles" : "../sdd-demo-projectC/css"
 }
